syntax = "proto3";

import "pkg/protocol/core/base/base.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package pbtv;

option go_package = "github.com/TencentBlueKing/bk-bscp/pkg/protocol/core/template-variable;pbtv";

// TemplateVariable source resource reference: pkg/dal/table/template_variable.go
message TemplateVariable {
  uint32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "变量ID" }];
  TemplateVariableSpec spec = 2;
  TemplateVariableAttachment attachment = 3;
  pbbase.Revision revision = 4;
}

// TemplateVariableSpec source resource reference: pkg/dal/table/template_variable.go
message TemplateVariableSpec {
  string name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "变量名称" }];
  string type = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "变量类型：string、number" }];
  string default_val = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "默认值" }];
  string memo = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "变量描述" }];
}

// TemplateVariableAttachment source resource reference: pkg/dal/table/template_variable.go
message TemplateVariableAttachment {
  uint32 biz_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "业务ID" }];
}
